# pre-commit-sync

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pre_commit_sync.py  pyproject.toml
