[tool.poetry]
name = "pre-commit-sync"
version = "0.1.0"
description = "Sync pre-commit additional_dependencies from package manager lock files"
authors = ["Miroslav Shubernetskiy"]
license = "MIT"
readme = "README.md"
packages = [{include = "pre_commit_sync.py"}]

[tool.poetry.scripts]
pre-commit-sync = 'pre_commit_sync:main'

[tool.poetry.dependencies]
poetry = "^1.2.0"
pyarn = "^0.1.3"
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
ptpython = "^3.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
